css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 5px;
}

h1{
	font-size: 50px;
}
/* 
	Main Page CSS
*/
@keyframes button-hover {
	from {background-color: gray;
		  color:white;}
	to {background-color: white;
		color: gray;}
}

@keyframes button-not-hover {
	from {background-color: white;
		color: gray;}
	to {background-color: gray;
		color:white;}
}

*{
	box-sizing: border-box;
}

body{
    display: block;
	width: 100%;
	height: 100%;
	max-width: 700px;
	margin: auto;
}

#header-placeholder{
	display: inline-block;
	width: 100%;
	height: 50px;
	margin-top: 10px;
	margin-bottom: 35px;
}

header{
	position: fixed;
	display: flex;
    top: 10px;
	width: 100%;
	max-width: 700px;
	height: 50px;
	background-color: darkgray;
	z-index: 1;
	border-radius: 10px;
	align-items: center;
}

header nav{
	width: 570px;
}

header nav a{
	padding-right: 17px;
	padding-left: 17px;
	text-decoration: none;
	color: black;
	font-size: 14px;
	background-color: gray;
	border-radius: 5px;
	margin: 5px 5px 5px 5px;
}

header nav a:hover{
 	animation-name: button-hover;
  	animation-duration: .5s;
  	animation-fill-mode: forwards;
}

header nav a:not(:hover){
	animation-name: button-not-hover;
	animation-duration: .5s;
	animation-fill-mode: forwards;
}

.logo{
	width: 120px;
	height: 20px; 
	background-image: url("../img/logo.png");
	background-size: 120px 20px; 
}

.header-double{
	vertical-align: top;
	display: flex;
	width: 100%;
	margin: 15px 0px 50px 0px;
	font-size: 14px;
}

.header-double section{
	width:350px;
}

#header-img{
	width: 300px;
	height: 300px;	
	background-image: url("../img/header-img.png");
	background-size:300px 300px;
}

.header-double button{
	display: block;
	margin: auto;
	margin-top:15px;
	width: 125px;
	height: 25px;
	background-color: white;
	border-color: black;
	border-width: 1px;
	cursor: pointer;
}

#header-text{
	padding-top: 45px;
}

.header-double h1{
	text-align: center;
	transform: scale(1.15,1);
}

hr{
	border-width: .5px;
	border-color: black;
	width: 100%;
}

.double{
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	width: 100%;
	font-size: 14px;
}

.double section{
	margin: 20px 5px 20px 5px;
	padding: 0px;
	width: 45%;
}

h2{
	font-size: 18px;
	font-weight: 200%;
}

.middle-img{
	width: 100%;
	height: 12.5%;
	background-image: url("../img/mid-page-accent.jpg");
	background-size: 100% 100%;
}

.triple{
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	width: 100%;
	font-size: 14px;
}

.triple section{
	margin: 20px 5px 20px 5px;
	width: 30%;
}

footer{
	margin-top: 30px;
}

footer address{
	margin-top: 15px;
	width: 140px;
	font-size: 14px;
}

footer p{
	margin-top: 10px;
	margin-bottom: 10px;
	width: 140px;
	font-size: 14px;
}

#copyright{
	display: block;
	text-align: center;
	font-size: 12px;
	width: 400px;
	height: 200px;
	margin: auto;
	margin-top: 50px;
}


/* 
	Servive Page CSS
*/



.services-header-img{
	width: 100%;
}

.services-intro{
	width: 100%;
	margin: 15px 0px 15px 0px;
}

.services-intro h2{
	font-size: 20px;
}

.double .services-block{
	margin: 15px 0px 15px 0px;
	width: 330px;
	background-color: lightgrey;
	padding: 10px;
	border-style: solid;
	border-color: black;
	border-width: 1px;	 
}

.double .services-block h3{
	margin-bottom: 10px;
}

.double .services-block p{
	margin-bottom: 15px;
}

.double .services-block button{
	height: 25px;
	width: 100px;
	border-radius: 5px;
	border-style: solid;
	border-color: black;
	border-width: 1px;
}

ul{
	padding-top: 15px;
	padding-left: 15px;
	list-style-type:circle;
}

.double .services-info-img{
	width: 330px;
	margin-top: 10px;
}

li{
	padding-bottom: 10px;
}

/*  */
/* Media Queries */
/*  */

@media only screen and (max-width: 800px) {

	header{
		flex-flow: row-reverse;
		flex-wrap: wrap;
		height: 80px;
	}

	#header-placeholder{
		height: 80px;
	}

	.logo{
		margin-right: auto;
		margin-left: auto;
		order: -1;
	}

	header nav{
		margin-right: auto;
		margin-left: auto;
		display: flex;
		width:97%;
		height: 30px;
		justify-content: space-between;
	}

	header nav a{
		text-align: center;
		line-height: 20px;
		margin: 0px 0px 10px 0px;
	}

    .header-double{
        align-content: center;
    }

    #header-text{
        display: block;
        margin-left: auto;
        margin-right: auto;
        padding-top: 0;
    }

    #header-img{
        width: 0px;
        height: 0px;
	}
	

	/*  */
	/* Service Page */
	/*  */

	.double{
		justify-content: center;
	}

	.double.footer{
		justify-content: space-between;
		
	}

	.double.footer section{
		width: 100%;
	}
}

@media only screen and (max-width: 500px) {


	header{
		top: 0px;
		border-radius: 0px;
		height: 230px;
	}

	#header-placeholder{
		height: 230px;
	}
	
	.logo{
		height: 30px;
		background-size: 120px 30px;
	}

	header nav{
		flex-direction: column;
		width: 100%;
		height: 200px;
		margin-top: 5px;
	}

	header nav a{
		height: 60px;
		margin-bottom: 0px;
		border-radius: 0px;
		border-style: solid;
		border-top-width: 1px;
		border-color: black;
	}
	
	.double section{

		width: 100%;
	}

	.triple section{
		width: 100%;
	}

}

